fixed browser compatibility issues with mozilla and edge, stillworking on Iexplorer

--- a/style.css
+++ b/style.css
@@ -11,9 +11,6 @@ body {
 }
 
 #main {
-	display: grid;
-	grid-template-columns: 200px auto;
-	grid-gap: 0px;
 	align-items: center;
 	overflow-wrap: break-word;
 	word-wrap: break-word;
@@ -52,7 +49,6 @@ h5 {
 	height: 100%;
 	display: block;
 	position: fixed;
-	grid-column:2;
 }
 
 ul {
@@ -97,8 +93,7 @@ a:hover {
 
 #main-doc {
 	line-height: 45px;
-	grid-column: 2;
-	margin: 0 auto;
+	margin-left: 200px;
 	padding-left: 10px;
 	padding-right: 10px;
 }
@@ -120,12 +115,14 @@ footer {
 @media only screen 
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
-	#main {
-	grid-template-columns: 100px auto;
-}
+
 
 #navbar {
 	width: 100px;
+}
+
+#main-doc {
+	margin-left: 100px;
 }
 
 .nav-link {
@@ -164,9 +161,6 @@ header {
 .bodyList {
 	padding-left: 10px;
 }
-
-
-
 
 /* Smartphones (landscape) ----------- */
 @media only screen 
